--- a/report/report.tex
+++ b/report/report.tex
@@ -33,6 +33,11 @@
 \newtheorem{definition}{Definition}
 \newtheorem{claim}{Claim}[section]
 
+
+%% declaring abs so that it works nicely
+\DeclarePairedDelimiter\abs{\lvert}{\rvert}%
+\DeclarePairedDelimiter\norm{\lVert}{\rVert}%
+
 \let\oldnl\nl% Store \nl in \oldnl
 \newcommand{\nonl}{\renewcommand{\nl}{\let\nl\oldnl}}% Remove line number for one specific line in algorithm
 
@@ -77,13 +82,13 @@
     \begin{adjustwidth}{0.5cm}{}
         Counting the number of steps provides an estimation of running stability and accurately detects unstable systems in cases when the modeled runner falls in a short number of step but has the major disadvantage of providing no absolute guarantee for stability in cases where the system does not fall for a high number of steps (this metric cannot differentiate a case where the runner falls after 21 steps from a case where it continues toward infinity). 
         \BlankLine
-        A more robust measurement is provided by the analysis of return maps and the analysis of limit-cycle behavior.
+        A more robust measurement is provided by the analysis of return maps and the analysis of limit-cycle behavior. A really common approach is to investigated the evolution, convergence and basin of attraction of various parameters when the system reaches \textit{apex heigh}. A periodic solution where deviation from a given solution diminish consistently from one step to the next ($\abs{\frac{dy_{i+1}}{dy_{i}}} < 1$) indicates a stable solution to the system.
         \[  \]
     \end{adjustwidth}
 
-    \item Which aspects of human locomotion's biomechanics can be investigated with this type of model, ad which one cannot be investigated?Which aspects of human locomotion's biomechanics can be investigated with this type of model, ad which one cannot be investigated?
+    \item Which aspects of human locomotion's biomechanics can be investigated with this type of model, and which one cannot be investigated?Which aspects of human locomotion's biomechanics can be investigated with this type of model, ad which one cannot be investigated?
     \begin{adjustwidth}{0.5cm}{}
-        
+        The SLIP model provides a good tool to model human running, it is unable to model walking without some kind of extension. A really common approach to extend it to walking is to model a two leg system rather than a single leg system. 
     \end{adjustwidth}
 \end{enumerate}
 
